                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-09-2006 fixed: mplayer would stall for 2 secs on seek when in gui.
 - 11-09-2006 fixed: audio hickup when switching from fullscreen
 - 11-09-2006 fixed: hopefully the kai play/host buttons behave better now.
 - 11-09-2006 fixed: mockup with slideshow screensaver random and general slideshow random.
 - 11-09-2006 fixed: [ 1556094 ] XBMC crash when try play video files from ISO 9660 discs
 - 11-09-2006 fixed: unnecessary calls to update() when marking a movie as watched/unwatched.
 - 11-09-2006 fixed: Consistency: Always remove the rename/delete buttons from the context menu when they're not appropriate in media windows.
 - 11-09-2006 fixed: Radiobutton responded in the opposite way to the <selected> tag.
 - 11-09-2006 fixed: Made sure you could call the media windows with a removable source as destination.
 - 11-09-2006 fixed: Get Thumb function in Music and Video Info didn't cache the "No thumb" item, so it was reverted next time you opened the dialog.
 - 11-09-2006 fixed: Thumbnail generation from a surface (eg xbe thumbs) ignored transparency.
 - 11-09-2006 fixed: [ 1555714 ] Thumbnails weren't displayed off the playlists item in Library view.
 - 11-09-2006 fixed: [ 1555436 ] partymode ---> open a playlist failed on single stream "playlists"
 - 11-09-2006 fixed: Slow queuing of library folders (such as a Genre folder) due to recursive database lookups.  "Solved" by just queuing the "all" item under each category.  Sort order will be the same as if you queue the "All" item under the category.
 - 11-09-2006 fixed: [ 1555716 ] system.profilethumb not displayed
 - 11-09-2006 fixed: led on playback control was broken